# agent-sessions

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
man/: agent-sessions.1
src/agent_sessions/: __init__.py  cli.py  discovery.py  models.py  render.py
tests/: helpers.py  test_cli.py  test_discovery.py  test_render.py
