[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sessions"
dynamic = ["version"]
description = "List and filter Claude Code and Codex CLI session transcripts from the shell."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lei Sun" }]
keywords = ["claude-code", "codex", "cli", "sessions", "agents"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/autumnust/agent-sessions"

[project.scripts]
agent-sessions = "agent_sessions.cli:main"
asess = "agent_sessions.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.dynamic]
version = { attr = "agent_sessions.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
